--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "node-fetch": "^3.2.6",
     "request": "^2.88.2",
-    "revolt.js": "^6.0.19"
+    "revolt.js": "^6.0.19",
+    "xhr2": "^0.2.1"
   }
 }
