--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
+  "name": "revolt-spotify-rpc",
+  "version": "0.0.1",
+  "description": "A simple , single file RPC for auto updating status in Revolt.chat created by @CodeWhiteOfficial",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-specifier-resolution=node index.js"
+    "start": "node --experimental-specifier-resolution=node index.js",
+    "prepare": "husky install"
   },
   "keywords": [],
-  "author": "",
+  "author": "CodeWhiteWeb",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
@@ -18,5 +19,21 @@
     "request": "^2.88.2",
     "revolt.js": "^6.0.19",
     "xhr2": "^0.2.1"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "2.8.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeWhiteWeb/Revolt-Spotify-RPC.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CodeWhiteWeb/Revolt-Spotify-RPC/issues"
+  },
+  "homepage": "https://github.com/CodeWhiteWeb/Revolt-Spotify-RPC#readme",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
